@startuml

title MBO Class Diagram
'skinparam backgroundColor transparent'
skinparam classBackgroundColor #e6ffcc
skinparam classBorderColor 	#049595
skinparam packageBorderColor  #049595
skinparam arrowColor #006666

package "Module.MBO" {
	class MBO {
		-time:SimTime
		+getTrainData(String regex):Object[][]
		-receiveTrainPosition(String) : String[2]
 		-transmitSafeBreakingDistance(String,double)
 		-transmitMboAuthority(String,double)
		-updateTrainInfo()
		-calculateAuthority(String):double[2]
		-calculateSafeBrakingDistance(String):double
	}

	class MBOGui {
		+display()
	}

	class MBOScheduler {
		-date:String
		-desiredThroughput:int
		+updateTrainSchedules(String[][])
		+updateOperatorSchedules(String[][])
		+generateSchedule(String,double)
	}

	class TrainInfo {
		-name:string
		-position:double[2]
		-timeSignalReceived:LocalDateTime
		-previousPosition:double[2]
		-timePreviousSignalReceived:LocalDateTime
		-velocity:double[2]
		-speed:double
		-authority:double
		-timeSignalTransmitted:LocalDateTime
		-calculateVelocity():void
		-updateLatestSignal():void
	}

	class BlockInfo {
		-section:char
		-number:int
		-length:double
		-grade:double
		-speedLimit:int
		-infrastructre:String
		-elevation:double
		-cumulativeElevation:double
	}

	class OperatorSchedule {
		-name:String
		-startTime:LocalDateTime
		-stopTime:LocalDateTime
	}

	class TrainSchedule {
		-name:String
		-startPosition:double[2]
		-startTime:LocalDateTime
		-stopPosition:double[2]
		-stopTime:LocalDateTime
	}
}

package "Shared" {
	interface Module {
		+timeUpdate(SimTime) : boolean
	}
	
	class SimTime {
		+hr : int
		+min : int
		+sec : int
		+toString() : String
	}
}

left to right direction

MBOGui "1" --* MBO : instantiates
MBOGui "1" --* MBOScheduler : instantiates
SimTime -- Module : imports
MBO ..|> Module : implements
MBO *--> "1.." TrainInfo
MBO *--> "1.." BlockInfo
MBOScheduler *--> "1.." TrainSchedule
MBOScheduler *--> "1.." OperatorSchedule

@enduml

[MBO]-1..>[TrainInfo], [MBO]-1..>[BlockInfo]
[MBOScheduler]-1..>[TrainSchedule], [MBOScheduler]-1..>[OperatorSchedule]